# ableos-retro

./: AbleOSQuestions.md  Cargo.toml  Drivers.md  README.md  ROADMAP.md  TerminalColorFormatter.txt  copy-paste.md  rough_goals.txt
.cargo/: config.toml
.github/workflows/: auto-format.yml  rust-build.yml  rust.yml
gen_fn/: Cargo.toml
gen_fn/src/: lib.rs
rash/: Cargo.toml
rash/src/: lib.rs
raw_images/: first.img
root/: URI_Structure.md  banner.txt
root/kernel/: README.md  config.json
src/: ads.rs  asm_help.rs  clip.rs  encrypt.rs  gdt.rs  io.rs  kernel_state.rs  lib.rs  logger.rs  main.rs  memory.rs  panic.rs  ps2_mouse.rs  serial.rs  shutdown_in_c.c  shutdown_in_c.rs  test.rs  time.rs  uri.rs  user.rs  util.rs  window.rs
src/allocator/: fixed_size_block.rs  linked_list.rs  mod.rs
src/devices/: mod.rs
src/drivers/: mod.rs  mouse.rs
src/hardware/: encrypt.rs  mod.rs  mouse.rs
src/hardware/cpu/: mod.rs
src/interrupts/: _cpuid.h  apic.rs  mod.rs  pic.rs
src/kernel_state/: _cpuid.h  cpuid.rs  hardware.rs  mod.rs
src/kernel_state/cpuid/: mod.rs
src/root/: banner.txt
src/sri/: device.rs  mod.rs
src/sri/fs/: mod.rs
src/sri/fs/afs/: mod.rs
src/sri/fs/ext2/: blockgroup.rs  entry.rs  inode.rs  mod.rs  superblock.rs
src/sri/fs/ustar/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs
src/vga/: mod.rs
src/vga_buffer/: mod.rs
src/window_manager/: mod.rs  permissions.rs  terminal.rs  window_draw.rs
temp_file_holder/: ahhh.txt  rough_goals.txt
utilitys/: run.sh  setup.sh
