[package]
name = "ableos"
version = "0.1.0"
edition = "2018"

[profile.release]
lto=true


[package.metadata.bootimage]
run-args=[
    # Add a network for the future
    # "-net", "nic,model=pcnet"

    # this allows log messages to be printed outside qemu
    "-serial", "stdio",
    "-vga", "vmware"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
     "-serial", "stdio",
    "-display", "none"

]
test-success-exit-code = 33
test-timeout = 300          # (in seconds)

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.linked_list_allocator]
# Used as a fallback allocator
version = "0.9.0"

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]


[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
lliw = "0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
core_detect = "*"
cpuio = {git = "https://github.com/anyusernameworks/cpuio.git"}
vga = { git = "https://github.com/abletheabove/vga" }

# Used as a temporary kernel configuration crate
serde-json-core = "0.4.0"
